--- a/KidsClub-SPA/src/app/nav/nav.component.html
+++ b/KidsClub-SPA/src/app/nav/nav.component.html
@@ -6,7 +6,7 @@
 
         <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['/members']" >Correspondances</a>
+                <a class="nav-link" [routerLink]="['/members']">Correspondances</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/lists']">Listes</a>
@@ -22,7 +22,7 @@
       </a>
 
             <div class="dropdown-menu mt-3" *dropdownMenu>
-                <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Modifier son profil</a>
+                <a class="dropdown-item" [routerLink]="['/member/edit']"><i class="fa fa-user"></i>Modifier son profil</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i> Déconnexion</a>
             </div>
